--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ I obtained my bachelor degree from Software Engineering Department, Beihang Univ
 
 <p id="publications">
 <h2>Publications
-    (<a href="" id="select0" onclick="showPubs(0); return false;">By year</a> /
-     <a href="" id="select1" onclick="showPubs(1); return false;">By topic</a>)
+    <!--(<a href="" id="select0" onclick="showPubs(0); return false;">By year</a> /
+     <a href="" id="select1" onclick="showPubs(1); return false;">By topic</a>)-->
 </h2>
 </p>
 
@@ -86,7 +86,6 @@ I obtained my bachelor degree from Software Engineering Department, Beihang Univ
         AnchorFace: Boosting TAR@FAR for Practical Face Recognition</br>
         <b>Jiaheng Liu*</b>, Haoyu Qin*, Yichao Wu, Ding Liang</br>
         AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2022 </br>
-        // [<a href="https://arxiv.org/abs/2012.05780">arXiv</a>][<a href="https://github.com/PeizeSun/OneNet">code</a>]
         <p></p>
     </li>
 
@@ -95,7 +94,6 @@ I obtained my bachelor degree from Software Engineering Department, Beihang Univ
         <b>Jiaheng Liu</b>*, Yudong Wu*, Yichao Wu, Chuming Li, Xiaolin Hu, Ding Liang, Mengyu Wang</br>
         IEEE International Conference on Computer Vision (<b>ICCV</b>), 2021 </br>
         [<a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Liu_DAM_Discrepancy_Alignment_Metric_for_Face_Recognition_ICCV_2021_paper.pdf">PDF</a>]
-        // [<a href="https://github.com/PeizeSun/SparseR-CNN">code</a>]
         <p></p>
     </li>
 
@@ -116,27 +114,32 @@ I obtained my bachelor degree from Software Engineering Department, Beihang Univ
     </li>
 
     <li>
-        ByteTrack: Multi-Object Tracking by Associating Every Detection Box</br>
+        Block Proposal Neural Architecture Search</br>
+        <b>Jiaheng Liu</b>, Shunfeng Zhou, Yichao Wu, Ken Chen, Wanli Ouyang, Dong Xu</br>
+        IEEE Transactions on Image Processing (<b>TIP</b>), 2020 </br>
+        [<a href="https://ieeexplore.ieee.org/document/9219251">PDF</a>]
+        <p></p>
+    </li>
+
+    <li>
+        Learning to Auto Weight: Entirely Data-driven and Highly Efficient Weighting Framework</br>
         Zhenmao Li, Yichao Wu, Ken Chen, Yudong Wu, Shunfeng Zhou, <b>Jiaheng Liu</b>, Junjie Yan </br>
         AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2020 </br>
         [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/5913">PDF</a>]
-        // [<a href="https://github.com/ifzhang/ByteTrack">code</a>]
         <p></p>
     </li>
     <li>
         Correlation Congruence for Knowledge Distillation</br>
         Baoyun Peng*, Xiao Jin*, <b>Jiaheng Liu</b>, Shunfeng Zhou, Yichao Wu, Yu Liu, Dongsheng Li, Zhaoning Zhang</br>
-        IEEE International Conference on Computer Vision (<b>ICCV</b>), 2021 </br>
+        IEEE International Conference on Computer Vision (<b>ICCV</b>), 2019 </br>
         [<a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Peng_Correlation_Congruence_for_Knowledge_Distillation_ICCV_2019_paper.pdf">PDF</a>]
-        // [<a href="https://github.com/PeizeSun/SparseR-CNN">code</a>]
         <p></p>
     </li>   
     <li>
         Knowledge Distillation via Route Constrained Optimization</br>
         Xiao Jin*, Baoyun Peng*, Yichao Wu, Yu Liu, <b>Jiaheng Liu</b>, Ding Liang, Junjie Yan, Xiaolin Hu</br>
-        IEEE International Conference on Computer Vision (<b>ICCV</b>), 2021 </br>
+        IEEE International Conference on Computer Vision (<b>ICCV</b>), 2019 </br>
         [<a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Jin_Knowledge_Distillation_via_Route_Constrained_Optimization_ICCV_2019_paper.pdf">PDF</a>]
-        // [<a href="https://github.com/PeizeSun/SparseR-CNN">code</a>]
         <p></p>
     </li>
 </ul>
@@ -281,7 +284,7 @@ I obtained my bachelor degree from Software Engineering Department, Beihang Univ
         ICCV2019 Workshop--The 2nd Place of the Lightweight Face Recognition Challenge, 2019
     </li>
     <li>
-        First Prize in the BUAA Feng Ru Cup (Academic and Technology) 2018
+        First Prize in the BUAA Feng Ru Cup (Academic and Technology), 2018
     </li>
 </ul>
 
@@ -290,7 +293,7 @@ I obtained my bachelor degree from Software Engineering Department, Beihang Univ
 
 <ul>
     <li>
-        Conference Reviewer:</br>
+        Conference Reviewer</br>
         CVPR 2020, AAAI 2021, CVPR 2021, ICCV 2021, CVPR 2022, AAAI 2022</br>
     </li>
 
