--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
 <p>
 I am a third-year (2019-now) Ph.D. student in Department of Computer Science, Beihang University, advised by Prof. Ke Xu. My research interest is computer vision and deep learning.
 <p>
-I obtained my bachelor degree (2015-2019) from Department of Software Engineering, Beihang University. I interned at SenseTime, Baidu.
+I obtained my bachelor degree (2015-2019) from Department of Software Engineering, Beihang University.
+<p>
+I interned at SenseTime, Baidu.
 </p>
 
 <p id="publications">
@@ -92,8 +94,8 @@ I obtained my bachelor degree (2015-2019) from Department of Software Engineerin
     <li>
         DAM: Discrepancy Alignment Metric for Face Recognition</br>
         <b>Jiaheng Liu</b>*, Yudong Wu*, Yichao Wu, Chuming Li, Xiaolin Hu, Ding Liang, Mengyu Wang</br>
-        IEEE International Conference on Computer Vision (<b>ICCV</b>), 2021, [<a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Liu_DAM_Discrepancy_Alignment_Metric_for_Face_Recognition_ICCV_2021_paper.pdf">PDF</a>]
-</br>
+        IEEE International Conference on Computer Vision (<b>ICCV</b>), 2021 </br>
+        [<a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Liu_DAM_Discrepancy_Alignment_Metric_for_Face_Recognition_ICCV_2021_paper.pdf">PDF</a>]
         <p></p>
     </li>
 
