--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     Department of Computer Science</br>
                     Beihang University </br>
 					</br>
-                    Email: liujiaheng AT buaa DOT com </br>
+                    Email: liujiaheng@buaa.edu.com </br>
 		</p>
 		<p>
 			<a href="https://github.com/liujiaheng"><img src="assets/logos/github_logo.png" height="30px"></a>&nbsp;&nbsp;
