--- a/index.html
+++ b/index.html
@@ -67,11 +67,12 @@
 <h2>Biography</h2> 
 
 <p>
-I am a third-year (2019-now) Ph.D. student in Department of Computer Science, Beihang University, advised by Prof. Ke Xu. My research interest is computer vision and deep learning.
+I am a third-year (2019-now) Ph.D. student in Department of Computer Science, Beihang University, advised by Prof. Ke Xu. I have closely collaborated with Dr. Yichao Wu, Dr. Tan Yu, Prof. Dong Xu and Prof. Wanli Ouyang.
+My research interest is computer vision and deep learning. I have done related research works on knowledge distillation, neural architecture search, face recognition, point cloud understanding and multi-modal learning.
 <p>
 I obtained my bachelor degree (2015-2019) from Department of Software Engineering, Beihang University.
 <p>
-I interned at SenseTime, Baidu.
+I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. Tan Yu.
 </p>
 
 <p id="publications">
