--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <h2>Biography</h2> 
 
 <p>
-I am a third-year (2019-now) Ph.D. student in Department of Computer Science, Beihang University, advised by Prof. Ke Xu. I have closely collaborated with Dr. Yichao Wu, Dr. Tan Yu, Prof. Dong Xu and Prof. Wanli Ouyang.
+I am a third-year (2019-now) Ph.D. student in Department of Computer Science, Beihang University, advised by Prof. Ke Xu. I have closely collaborated with Dr. Yichao Wu, Dr. Jinyang Guo, Dr. Tan Yu, Prof. Dong Xu and Prof. Wanli Ouyang.
 My research interest is computer vision and deep learning. I have done related research works on knowledge distillation, neural architecture search, face recognition, point cloud understanding and multi-modal learning.
 <p>
 I obtained my bachelor degree (2015-2019) from Department of Software Engineering, Beihang University.
