--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     Department of Computer Science</br>
                     Beihang University </br>
 					</br>
-                    Email: liujiaheng@buaa.edu.com </br>
+                    Email: liujiaheng@buaa.edu.cn </br>
 		</p>
 		<p>
 			<a href="https://github.com/liujiaheng"><img src="assets/logos/github_logo.png" height="30px"></a>&nbsp;&nbsp;
@@ -58,7 +58,7 @@
 
 			</td>
 			<td width="25%">
-				<img src="assets/imgs/sample.jpg" width="100%"/>
+				<img src="assets/imgs/mime.jpg" width="100%"/>
 			</td>
 		<tr>
 	</tbody>
