--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 <script id="pubs_selected">
 <ul>
     <li>
+       Cross-Lingual Cross-Modal Consolidation for
+Effective Multilingual Video Corpus Moment Retrieval</br>
+        <b>Jiaheng Liu</b>, Tan Yu, Hanyu Peng, Mingming Sun, Ping Li</br>
+        North American Chapter of the Association for Computational Linguistics (<b>NAACL</b>) Findings, 2022 </br>
+        <p></p>
+    </li>
+    <li>
         AnchorFace: Boosting TAR@FAR for Practical Face Recognition</br>
         <b>Jiaheng Liu*</b>, Haoyu Qin*, Yichao Wu, Ding Liang</br>
         AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2022 </br>
