--- a/index.html
+++ b/index.html
@@ -85,11 +85,18 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 <div id="pubs"></div>
 <script id="pubs_selected">
 <ul>
+	    <li>
+       Computer-aided Tuberculosis Diagnosis with Attribute Reasoning Assistance
+</br>
+        Chengwei Pan, Gangming Zhao, Junjie Fang, Baolian Qi, <b>Jiaheng Liu</b>, Chaowei Fang, Dingwen Zhang, Jinpeng Li</br>
+        Medical Image Computing and Computer Assisted Interventions (<b>MICCAI</b>), 2022 </br>
+        <p></p>
+    </li>
     <li>
        Cross-Lingual Cross-Modal Consolidation for
 Effective Multilingual Video Corpus Moment Retrieval</br>
         <b>Jiaheng Liu</b>, Tan Yu, Hanyu Peng, Mingming Sun, Ping Li</br>
-        North American Chapter of the Association for Computational Linguistics (<b>NAACL</b>) Findings, 2022 </br>
+        North American Chapter of the Association for Computational Linguistics (<b>NAACL</b>), 2022 </br>
         <p></p>
     </li>
     <li>
