--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 <script id="pubs_selected">
 <ul>
 	    <li>
+        APSNet: Towards Adaptive Point Sampling for Efficient 3D Action Recognition</br>
+        <b>Jiaheng Liu</b>, Jinyang Guo, Dong Xu</br>
+        IEEE Transactions on Image Processing (<b>TIP</b>), 2020 </br>
+        <p></p>
+    </li>
+	
+	    <li>
        Computer-aided Tuberculosis Diagnosis with Attribute Reasoning Assistance
 </br>
         Chengwei Pan, Gangming Zhao, Junjie Fang, Baolian Qi, <b>Jiaheng Liu</b>, Chaowei Fang, Dingwen Zhang, Jinpeng Li</br>
