--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@ Effective Multilingual Video Corpus Moment Retrieval</br>
     </li>
     <li>
         AnchorFace: Boosting TAR@FAR for Practical Face Recognition</br>
-        <b>Jiaheng Liu*</b>, Haoyu Qin*, Yichao Wu, Ding Liang</br>
+        <b>Jiaheng Liu</b>, Haoyu Qin, Yichao Wu, Ding Liang</br>
         AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2022 </br>
         <p></p>
     </li>
 
     <li>
         DAM: Discrepancy Alignment Metric for Face Recognition</br>
-        <b>Jiaheng Liu</b>*, Yudong Wu*, Yichao Wu, Chuming Li, Xiaolin Hu, Ding Liang, Mengyu Wang</br>
+        <b>Jiaheng Liu</b>, Yudong Wu, Yichao Wu, Chuming Li, Xiaolin Hu, Ding Liang, Mengyu Wang</br>
         IEEE International Conference on Computer Vision (<b>ICCV</b>), 2021 </br>
         [<a href="https://openaccess.thecvf.com/content/ICCV2021/papers/Liu_DAM_Discrepancy_Alignment_Metric_for_Face_Recognition_ICCV_2021_paper.pdf">PDF</a>]
         <p></p>
