--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@ Effective Multilingual Video Corpus Moment Retrieval</br>
     </li>
     <li>
         Correlation Congruence for Knowledge Distillation</br>
-        Baoyun Peng*, Xiao Jin*, <b>Jiaheng Liu</b>, Shunfeng Zhou, Yichao Wu, Yu Liu, Dongsheng Li, Zhaoning Zhang</br>
+        Baoyun Peng, Xiao Jin, <b>Jiaheng Liu</b>, Shunfeng Zhou, Yichao Wu, Yu Liu, Dongsheng Li, Zhaoning Zhang</br>
         IEEE International Conference on Computer Vision (<b>ICCV</b>), 2019 </br>
         [<a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Peng_Correlation_Congruence_for_Knowledge_Distillation_ICCV_2019_paper.pdf">PDF</a>]
         <p></p>
     </li>   
     <li>
         Knowledge Distillation via Route Constrained Optimization</br>
-        Xiao Jin*, Baoyun Peng*, Yichao Wu, Yu Liu, <b>Jiaheng Liu</b>, Ding Liang, Junjie Yan, Xiaolin Hu</br>
+        Xiao Jin, Baoyun Peng, Yichao Wu, Yu Liu, <b>Jiaheng Liu</b>, Ding Liang, Junjie Yan, Xiaolin Hu</br>
         IEEE International Conference on Computer Vision (<b>ICCV</b>), 2019 </br>
         [<a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Jin_Knowledge_Distillation_via_Route_Constrained_Optimization_ICCV_2019_paper.pdf">PDF</a>]
         <p></p>
