--- a/index.html
+++ b/index.html
@@ -85,6 +85,19 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 <div id="pubs"></div>
 <script id="pubs_selected">
 <ul>
+	
+	 <li>
+        OneFace: One Threshold for All</br>
+        <b>Jiaheng Liu</b>, Zhipeng Yu, Haoyu Qin, Yichao Wu, Ding Liang, Gangming Zhao, Ke Xu</br>
+        European Conference on Computer Vision (<b>ECCV</b>), 2022 </br>
+        <p></p>
+    </li>
+					        <li>
+        CoupleFace: Relation Matters for Face Recognition Distillation</br>
+        <b>Jiaheng Liu</b>, Haoyu Qin, Yichao Wu, Jinyang Guo, Ding Liang, Ke Xu</br>
+        European Conference on Computer Vision (<b>ECCV</b>), 2022 </br>
+        <p></p>
+    </li>
 	    <li>
         APSNet: Towards Adaptive Point Sampling for Efficient 3D Action Recognition</br>
         <b>Jiaheng Liu</b>, Jinyang Guo, Dong Xu</br>
@@ -95,7 +108,7 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 	    <li>
        Computer-aided Tuberculosis Diagnosis with Attribute Reasoning Assistance
 </br>
-        Chengwei Pan, Gangming Zhao, Junjie Fang, Baolian Qi, <b>Jiaheng Liu</b>, Chaowei Fang, Dingwen Zhang, Jinpeng Li</br>
+        Chengwei Pan, Gangming Zhao, Junjie Fang, Baolian Qi, <b>Jiaheng Liu</b>, Chaowei Fang, Dingwen Zhang, Jinpeng Li, Yizhou Yu</br>
         Medical Image Computing and Computer Assisted Interventions (<b>MICCAI</b>), 2022 </br>
         <p></p>
     </li>
