--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
        Cross-Lingual Cross-Modal Consolidation for
 Effective Multilingual Video Corpus Moment Retrieval</br>
         <b>Jiaheng Liu</b>, Tan Yu, Hanyu Peng, Mingming Sun, Ping Li</br>
-        North American Chapter of the Association for Computational Linguistics (<b>NAACL</b>), 2022 </br>
+        Findings of North American Chapter of the Association for Computational Linguistics (<b>NAACL</b>), 2022 </br>
         <p></p>
     </li>
     <li>
