--- a/index.html
+++ b/index.html
@@ -314,6 +314,9 @@ Effective Multilingual Video Corpus Moment Retrieval</br>
 <h2>Honors</h2>
 
 <ul>
+	  <li>
+        Huawei Scholarship, 2022
+    </li>
     <li>
         First-class Academic Scholarship, 2019, 2020, 2021
     </li>
@@ -331,7 +334,7 @@ Effective Multilingual Video Corpus Moment Retrieval</br>
 <ul>
     <li>
         Conference Reviewer</br>
-        CVPR 2020, AAAI 2021, CVPR 2021, ICCV 2021, CVPR 2022, AAAI 2022</br>
+        CVPR 2020, AAAI 2021, CVPR 2021, ICCV 2021, CVPR 2022, AAAI 2022, ECCV 2022</br>
     </li>
 
     <li>
