--- a/index.html
+++ b/index.html
@@ -85,7 +85,19 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 <div id="pubs"></div>
 <script id="pubs_selected">
 <ul>
-	
+	<li>
+        3D-Pruning: A Model Compression Framework for Efficient 3D Action Recognition</br>
+        Jinyang Guo, <b>Jiaheng Liu</b>, Dong Xu</br>
+        IEEE Transactions on Circuits and Systems for Video Technology (<b>TCSVT</b>), 2022</br>
+        <p></p>
+    </li>
+
+    <li>
+       GeometryMotion-Transformer: An End-to-End Framework for 3D Action Recognition</br>
+        <b>Jiaheng Liu</b>, Jinyang Guo, Dong Xu</br>
+        IEEE Transactions on Multimedia (<b>TMM</b>), 2022</br>
+        <p></p>
+    </li>
 	 <li>
         OneFace: One Threshold for All</br>
         <b>Jiaheng Liu</b>, Zhipeng Yu, Haoyu Qin, Yichao Wu, Ding Liang, Gangming Zhao, Ke Xu</br>
