--- a/index.html
+++ b/index.html
@@ -85,9 +85,15 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 <div id="pubs"></div>
 <script id="pubs_selected">
 <ul>
+		<li>
+        LVP-M3: Language-aware Visual Prompt for Multilingual Multimodal Machine Translation</br>
+	Hongcheng Guo*, <b>Jiaheng Liu*</b>, Haoyang Huang, Jian Yang, Zhoujun Li, Dongdong Zhang, Zheng Cui</br>
+        Empirical Methods in Natural Language Processing (<b>EMNLP</b>), 2022</br>
+        <p></p>
+    </li>
 	<li>
         3D-Pruning: A Model Compression Framework for Efficient 3D Action Recognition</br>
-        Jinyang Guo, <b>Jiaheng Liu</b>, Dong Xu</br>
+        Jinyang Guo*, <b>Jiaheng Liu*</b>, Dong Xu</br>
         IEEE Transactions on Circuits and Systems for Video Technology (<b>TCSVT</b>), 2022</br>
         <p></p>
     </li>
