--- a/index.html
+++ b/index.html
@@ -122,7 +122,13 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
         IEEE Transactions on Image Processing (<b>TIP</b>), 2022 </br>
         <p></p>
     </li>
-	
+		    <li>
+       Deep 3D Vessel Segmentation based on Cross Transformer Network
+</br>
+        Chengwei Pan, Baolian Qi, Gangming Zhao,  <b>Jiaheng Liu</b>,Chaowei Fang, Dingwen Zhang, Jinpeng Li</br>
+        International Conference on Bioinformatics and Biomedicine (<b>BIBM</b>), 2022 </br>
+        <p></p>
+    </li>
 	    <li>
        Computer-aided Tuberculosis Diagnosis with Attribute Reasoning Assistance
 </br>
