--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 		    <li>
        Deep 3D Vessel Segmentation based on Cross Transformer Network
 </br>
-        Chengwei Pan, Baolian Qi, Gangming Zhao,  <b>Jiaheng Liu</b>,Chaowei Fang, Dingwen Zhang, Jinpeng Li</br>
+        Chengwei Pan, Baolian Qi, Gangming Zhao,  <b>Jiaheng Liu</b>, Chaowei Fang, Dingwen Zhang, Jinpeng Li</br>
         International Conference on Bioinformatics and Biomedicine (<b>BIBM</b>), 2022 </br>
         <p></p>
     </li>
@@ -366,7 +366,7 @@ Effective Multilingual Video Corpus Moment Retrieval</br>
 
     <li>
         Journal Reviewer</br> 
-        IJCV, CSUR</br>
+        IJCV, CSUR, TNNLS</br>
 	<!-- Journal of Visual Communication and Image Representation</br> -->
     </li>
 </ul>
