--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 <div id="pubs"></div>
 <script id="pubs_selected">
 <ul>
+			<li>
+        LogLG: Weakly Supervised Log Anomaly Detection via Log-Event Graph Construction</br>
+	Hongcheng Guo, Yuhui Guo, Jian Yang, <b>Jiaheng Liu**</b>, Zhoujun Li, Tieqiao Zheng, Liangfan Zheng, Weichao Hou, Bo Zhang</br>
+        International Conference on Database Systems for Advanced Applications (<b>DASFAA</b>), 2023</br>
+        <p></p>
+    </li>
 		<li>
         LVP-M3: Language-aware Visual Prompt for Multilingual Multimodal Machine Translation</br>
 	Hongcheng Guo*, <b>Jiaheng Liu*</b>, Haoyang Huang, Jian Yang, Zhoujun Li, Dongdong Zhang, Zheng Cui</br>
@@ -203,6 +209,7 @@ Effective Multilingual Video Corpus Moment Retrieval</br>
         [<a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Jin_Knowledge_Distillation_via_Route_Constrained_Optimization_ICCV_2019_paper.pdf">PDF</a>]
         <p></p>
     </li>
+<li><small>*Equal contribution, **Corresponding author</small></li>
 </ul>
 </script>
 
