--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 <div id="pubs"></div>
 <script id="pubs_selected">
 <ul>
+	
+ <li>
+       GD-MAE: Generative Decoder for MAE Pre-training on LiDAR Point Clouds</br>
+ Honghui Yang, Tong He, <b>Jiaheng Liu</b>, Hua Chen, Boxi Wu, Binbin Lin, Xiaofei He, Wanli Ouyang</br>
+        IEEE Computer Vision and Pattern Recognition (<b>CVPR</b>), 2023</br>
+        <p></p>
+   <li>
 			<li>
         LogLG: Weakly Supervised Log Anomaly Detection via Log-Event Graph Construction</br>
 	Hongcheng Guo, Yuhui Guo, Jian Yang, <b>Jiaheng Liu**</b>, Zhoujun Li, Tieqiao Zheng, Liangfan Zheng, Weichao Hou, Bo Zhang</br>
