--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <h2>Biography</h2> 
 
 <p>
-I am a fourth-year (2019-now) Ph.D. student in Department of Computer Science, Beihang University, advised by Prof. Ke Xu. I have closely collaborated with Dr. Yichao Wu, Dr. Jinyang Guo, Dr. Tan Yu, Prof. Dong Xu and Prof. Wanli Ouyang.
+I am a final-year (2019-now) Ph.D. student in Department of Computer Science, Beihang University, advised by Prof. Ke Xu. I have closely collaborated with Dr. Yichao Wu, Dr. Jinyang Guo, Dr. Tan Yu, Prof. Dong Xu and Prof. Wanli Ouyang.
 My research interest is computer vision and deep learning. I have done related research works on knowledge distillation, neural architecture search, face recognition, point cloud understanding and multi-modal learning.
 <p>
 I obtained my bachelor degree (2015-2019) from Department of Software Engineering, Beihang University.
@@ -91,7 +91,7 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
  Honghui Yang, Tong He, <b>Jiaheng Liu</b>, Hua Chen, Boxi Wu, Binbin Lin, Xiaofei He, Wanli Ouyang</br>
         IEEE Computer Vision and Pattern Recognition (<b>CVPR</b>), 2023</br>
         <p></p>
-   <li>
+   </li>
 			<li>
         LogLG: Weakly Supervised Log Anomaly Detection via Log-Event Graph Construction</br>
 	Hongcheng Guo, Yuhui Guo, Jian Yang, <b>Jiaheng Liu**</b>, Zhoujun Li, Tieqiao Zheng, Liangfan Zheng, Weichao Hou, Bo Zhang</br>
