--- a/index.html
+++ b/index.html
@@ -375,12 +375,12 @@ Effective Multilingual Video Corpus Moment Retrieval</br>
 <ul>
     <li>
         Conference Reviewer</br>
-        CVPR 2020, AAAI 2021, CVPR 2021, ICCV 2021, CVPR 2022, AAAI 2022, ECCV 2022</br>
+        CVPR 2020, AAAI 2021, CVPR 2021, ICCV 2021, CVPR 2022, AAAI 2022, ECCV 2022, AAAI 2023, CVPR 2023, NeurIPS 2023</br>
     </li>
 
     <li>
         Journal Reviewer</br> 
-        IJCV, CSUR, TNNLS</br>
+        IJCV, CSUR, TNNLS, TIP</br>
 	<!-- Journal of Visual Communication and Image Representation</br> -->
     </li>
 </ul>
