--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ Effective Multilingual Video Corpus Moment Retrieval</br>
 <ul>
     <li>
         Conference Reviewer</br>
-        CVPR 2020, AAAI 2021, CVPR 2021, ICCV 2021, CVPR 2022, AAAI 2022, ECCV 2022, AAAI 2023, CVPR 2023, NeurIPS 2023</br>
+        CVPR 2020, AAAI 2021, CVPR 2021, ICCV 2021, CVPR 2022, AAAI 2022, ECCV 2022, AAAI 2023, CVPR 2023, ICCV 2023, NeurIPS 2023</br>
     </li>
 
     <li>
