--- a/index.html
+++ b/index.html
@@ -85,7 +85,12 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 <div id="pubs"></div>
 <script id="pubs_selected">
 <ul>
-	
+ <li>
+      Adaptive Contrastive Distillation for BERT Compression</br>
+ Jinyang Guo*, <b>Jiaheng Liu*</b>, Zining Wang, Yuqing Ma, Ruihao Gong, Ke Xu, Xianglong Liu</br>
+        Findings of the Association for Computational Linguistics (<b>ACL</b>), 2023</br>
+        <p></p>
+   </li>	
  <li>
        GD-MAE: Generative Decoder for MAE Pre-training on LiDAR Point Clouds</br>
  Honghui Yang, Tong He, <b>Jiaheng Liu</b>, Hua Chen, Boxi Wu, Binbin Lin, Xiaofei He, Wanli Ouyang</br>
@@ -94,7 +99,7 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
    </li>
 			<li>
         LogLG: Weakly Supervised Log Anomaly Detection via Log-Event Graph Construction</br>
-	Hongcheng Guo, Yuhui Guo, Jian Yang, <b>Jiaheng Liu**</b>, Zhoujun Li, Tieqiao Zheng, Liangfan Zheng, Weichao Hou, Bo Zhang</br>
+	Hongcheng Guo, Yuhui Guo, Jian Yang, <b>Jiaheng Liu#</b>, Zhoujun Li, Tieqiao Zheng, Liangfan Zheng, Weichao Hou, Bo Zhang</br>
         International Conference on Database Systems for Advanced Applications (<b>DASFAA</b>), 2023</br>
         <p></p>
     </li>
@@ -131,7 +136,7 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
     </li>
 	    <li>
         APSNet: Towards Adaptive Point Sampling for Efficient 3D Action Recognition</br>
-        <b>Jiaheng Liu</b>, Jinyang Guo, Dong Xu</br>
+        <b>Jiaheng Liu*</b>, Jinyang Guo*, Dong Xu</br>
         IEEE Transactions on Image Processing (<b>TIP</b>), 2022 </br>
         <p></p>
     </li>
@@ -216,7 +221,7 @@ Effective Multilingual Video Corpus Moment Retrieval</br>
         [<a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Jin_Knowledge_Distillation_via_Route_Constrained_Optimization_ICCV_2019_paper.pdf">PDF</a>]
         <p></p>
     </li>
-<li><small>*Equal contribution, **Corresponding author</small></li>
+<li><small>*Equal contribution, #Corresponding author</small></li>
 </ul>
 </script>
 
