--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 <div id="pubs"></div>
 <script id="pubs_selected">
 <ul>
+	 <li>
+      GripRank: Bridging the Gap between Retrieval and Generation via the Generative Knowledge Improved Passage Ranking</br>
+	Jiaqi Bai, Hongcheng Guo, <b>Jiaheng Liu*</b>, Jian Yang, Xinnian Liang, Zhao Yan and Zhoujun Li</br>
+        ACM International Conference on Information and Knowledge Management (<b>CIKM</b>), 2023</br>
+        <p></p>
+   </li>
  <li>
       Adaptive Contrastive Distillation for BERT Compression</br>
  Jinyang Guo*, <b>Jiaheng Liu*</b>, Zining Wang, Yuqing Ma, Ruihao Gong, Ke Xu, Xianglong Liu</br>
