--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 <ul>
 	 <li>
       GripRank: Bridging the Gap between Retrieval and Generation via the Generative Knowledge Improved Passage Ranking</br>
-	Jiaqi Bai, Hongcheng Guo, <b>Jiaheng Liu</b>, Jian Yang, Xinnian Liang, Zhao Yan and Zhoujun Li</br>
+	Jiaqi Bai, Hongcheng Guo, <b>Jiaheng Liu</b>, Jian Yang, Xinnian Liang, Zhao Yan, Zhoujun Li</br>
         ACM International Conference on Information and Knowledge Management (<b>CIKM</b>), 2023</br>
         <p></p>
    </li>
