--- a/index.html
+++ b/index.html
@@ -85,6 +85,14 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 <div id="pubs"></div>
 <script id="pubs_selected">
 <ul>
+	    <li>
+        ICD-Face: Intra-class Compactness Distillation for Face Recognition
+</br>
+       
+Zhipeng Yu, <b>Jiaheng Liu#</b>, Haoyu Qin, Yichao Wu, Kun Hu, Jiayi Tian, Ding Liang</br>
+        IEEE International Conference on Computer Vision (<b>ICCV</b>), 2023 </br>
+        <p></p>
+    </li>
 	 <li>
       GripRank: Bridging the Gap between Retrieval and Generation via the Generative Knowledge Improved Passage Ranking</br>
 	Jiaqi Bai, Hongcheng Guo, <b>Jiaheng Liu</b>, Jian Yang, Xinnian Liang, Zhao Yan, Zhoujun Li</br>
