--- a/index.html
+++ b/index.html
@@ -85,6 +85,13 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 <div id="pubs"></div>
 <script id="pubs_selected">
 <ul>
+	<li><small>*Equal contribution, #Corresponding author</small></li>
+	<li>
+        M2C: Towards Automatic Multimodal Manga Complement</br>
+	Hongcheng Guo, Boyang Wang, Jiaqi Bai, <b>Jiaheng Liu#</b>, Jian Yang#, Zhoujun Li</br>
+        Findings of Empirical Methods in Natural Language Processing (<b>EMNLP</b>), 2023</br>
+        <p></p>
+    </li>
 	    <li>
         ICD-Face: Intra-class Compactness Distillation for Face Recognition
 </br>
@@ -102,7 +109,7 @@ Zhipeng Yu, <b>Jiaheng Liu#</b>, Haoyu Qin, Yichao Wu, Kun Hu, Jiayi Tian, Ding 
  <li>
       Adaptive Contrastive Distillation for BERT Compression</br>
  Jinyang Guo*, <b>Jiaheng Liu*</b>, Zining Wang, Yuqing Ma, Ruihao Gong, Ke Xu, Xianglong Liu</br>
-        Findings of the Association for Computational Linguistics (<b>ACL</b>), 2023</br>
+        Findings of Association for Computational Linguistics (<b>ACL</b>), 2023</br>
         <p></p>
    </li>	
  <li>
@@ -235,7 +242,6 @@ Effective Multilingual Video Corpus Moment Retrieval</br>
         [<a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Jin_Knowledge_Distillation_via_Route_Constrained_Optimization_ICCV_2019_paper.pdf">PDF</a>]
         <p></p>
     </li>
-<li><small>*Equal contribution, #Corresponding author</small></li>
 </ul>
 </script>
 
