--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 <div id="pubs"></div>
 <script id="pubs_selected">
 <ul>
-	<li><small>*Equal contribution, #Corresponding author</small></li>
+	<small>*Equal contribution, #Corresponding author</small>
 	<li>
         M2C: Towards Automatic Multimodal Manga Complement</br>
 	Hongcheng Guo, Boyang Wang, Jiaqi Bai, <b>Jiaheng Liu#</b>, Jian Yang#, Zhoujun Li</br>
