--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 <h2>Biography</h2> 
 
 <p>
-I am a final-year (2019-now) Ph.D. student in Department of Computer Science, Beihang University, advised by Prof. Ke Xu. I have closely collaborated with Dr. Yichao Wu, Dr. Jinyang Guo, Dr. Tan Yu, Prof. Dong Xu and Prof. Wanli Ouyang.
-My research interest is computer vision and deep learning. I have done related research works on knowledge distillation, neural architecture search, face recognition, point cloud understanding and multi-modal learning.
+I am a final-year (2019-now) Ph.D. student in the Department of Computer Science, Beihang University, advised by Prof. Ke Xu and Prof. Dong Xu. I have closely collaborated with Dr. Yichao Wu, Dr. Jinyang Guo, Dr. Tan Yu, and Prof. Wanli Ouyang.
+My research interests include computer vision and natural language processing. I have done related research works on knowledge distillation, neural architecture search, face recognition, point cloud understanding, multi-modal learning, and large language models.
 <p>
-I obtained my bachelor degree (2015-2019) from Department of Software Engineering, Beihang University.
+I obtained my bachelor degree (2015-2019) from the Department of Software Engineering, Beihang University.
 <p>
 I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. Tan Yu.
 </p>
