--- a/index.html
+++ b/index.html
@@ -87,8 +87,14 @@ I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. 
 <ul>
 	<small>*Equal contribution, #Corresponding author</small>
 	<li>
+        LogFormer: A Pre-train and Tuning Pipeline for Log Anomaly Detection</br>
+	Hongcheng Guo, Jian Yang, <b>Jiaheng Liu</b>, Jiaqi Bai, Boyang Wang, Zhoujun Li, Tieqiao Zheng, Bo Zhang, Junran Peng, Qi Tian</br>
+        AAAI Conference on Artificial Intelligence (<b>AAAI</b>), 2024</br>
+        <p></p>
+    </li>
+	<li>
         M2C: Towards Automatic Multimodal Manga Complement</br>
-	Hongcheng Guo, Boyang Wang, Jiaqi Bai, <b>Jiaheng Liu#</b>, Jian Yang#, Zhoujun Li</br>
+	Hongcheng Guo, Boyang Wang, Jiaqi Bai, <b>Jiaheng Liu</b>, Jian Yang, Zhoujun Li</br>
         Findings of Empirical Methods in Natural Language Processing (<b>EMNLP</b>), 2023</br>
         <p></p>
     </li>
