--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<h1>Jiaheng Liu 刘佳恒<h1>
 				</div>
 
-                <h3>Ph.D. Student</h3>
+                <h3>PhD</h3>
 
 		<p>
                     Department of Computer Science</br>
@@ -67,12 +67,12 @@
 <h2>Biography</h2> 
 
 <p>
-I am a final-year (2019-now) Ph.D. student in the Department of Computer Science, Beihang University, advised by Prof. Ke Xu and Prof. Dong Xu. I have closely collaborated with Dr. Yichao Wu, Dr. Jinyang Guo, Dr. Tan Yu, and Prof. Wanli Ouyang.
+I obtained a PhD degree (2019-2023) in the Department of Computer Science, Beihang University, advised by Prof. Ke Xu and Prof. Dong Xu. I have closely collaborated with Dr. Yichao Wu, Dr. Jinyang Guo, Dr. Tan Yu, and Prof. Wanli Ouyang.
 My research interests include computer vision and natural language processing. I have done related research works on knowledge distillation, neural architecture search, face recognition, point cloud understanding, multi-modal learning, and large language models.
 <p>
-I obtained my bachelor degree (2015-2019) from the Department of Software Engineering, Beihang University.
+I obtained a bachelor's degree (2015-2019) from the Department of Software Engineering, Beihang University.
 <p>
-I interned at SenseTime, working with Dr. Yichao Wu and Baidu, working with Dr. Tan Yu.
+I interned at SenseTime (working with Dr. Yichao Wu), Baidu (working with Dr. Tan Yu), and Shanghai AI LAB (working with Dr. Tong He).
 </p>
 
 <p id="publications">
