--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@ I interned at SenseTime (working with Dr. Yichao Wu), Baidu (working with Dr. Ta
 <script id="pubs_selected">
 <ul>
 	<small>*Equal contribution, #Corresponding author</small>
+		<li>
+        m3P: Towards Multimodal Multilingual Translation with Multimodal Prompt</br>
+	Jian Yang, Hongcheng Guo, Yuwei Yin, Jiaqi Bai, Bing Wang, <b>Jiaheng Liu</b>, Xinnian Liang, LinZheng Chai, Liqun Yang, Zhoujun Li</br>
+        Joint International Conference on Computational Linguistics, Language Resources and Evaluation (<b>COLING</b>), 2024</br>
+        <p></p>
+    </li>
 	<li>
         OWL: A Large Language Model for IT Operations</br>
 	Hongcheng Guo, Jian Yang#, <b>Jiaheng Liu#</b>, Liqun Yang, Linzheng Chai, Jiaqi Bai, Junran Peng, Xiaorong Hu, Chao Chen, Dongfeng Zhang, Xu Shi, Tieqiao Zheng, Liangfan Zheng, Bo Zhang, Ke Xu, Zhoujun Li</br>
