--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@ I interned at SenseTime (working with Dr. Yichao Wu), Baidu (working with Dr. Ta
 <script id="pubs_selected">
 <ul>
 	<small>*Equal contribution, #Corresponding author</small>
+	 <li>
+       LTA-PCS: Learnable Task-Agnostic Point Cloud Sampling</br>
+ <b>Jiaheng Liu*</b>, Jianhao Li*, Jinyang Guo, Kaisiyuan Wang, Hongcheng Guo, Jian Yang, Junran Peng, Xianglong Liu, Ke Xu</br>
+        IEEE Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024</br>
+        <p></p>
+   </li>
 		<li>
         m3P: Towards Multimodal Multilingual Translation with Multimodal Prompt</br>
 	Jian Yang, Hongcheng Guo, Yuwei Yin, Jiaqi Bai, Bing Wang, <b>Jiaheng Liu</b>, Xinnian Liang, LinZheng Chai, Liqun Yang, Zhoujun Li</br>
