--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<title>Jiaheng Liu</title>
+<title>Ge ZHang</title>
 
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="keywords" content="Jiaheng Liu"> 
@@ -39,20 +39,16 @@
 		<tr>
 			<td width="75%">
 				<div id="toptitle">
-					<h1>Jiaheng Liu 刘佳恒<h1>
+					<h1>Ge Zhang 张舸<h1>
 				</div>
 
-                <h3>PhD</h3>
 
 		<p>
-                    Department of Computer Science</br>
-                    Beihang University </br>
-					</br>
-                    Email: liujiaheng@buaa.edu.cn </br>
+                    Email: gezhang@umich.edu </br>
 		</p>
 		<p>
-			<a href="https://github.com/liujiaheng"><img src="assets/logos/github_logo.png" height="30px"></a>&nbsp;&nbsp;
-			<a href="https://scholar.google.com/citations?user=yFI_RjUAAAAJ&hl=zh-CN"><img src="assets/logos/google_logo.png" height="30px"></a>&nbsp;&nbsp;
+			<a href="https://github.com/Gzhang-umich"><img src="assets/logos/github_logo.png" height="30px"></a>&nbsp;&nbsp;
+			<a href="https://scholar.google.com/citations?user=qyTrq4kAAAAJ&hl=zh-CN"><img src="assets/logos/google_logo.png" height="30px"></a>&nbsp;&nbsp;
 		</p>
 			</td>
 
@@ -67,12 +63,14 @@
 <h2>Biography</h2> 
 
 <p>
-I obtained a PhD degree (2019-2023) in the Department of Computer Science, Beihang University, advised by Prof. Ke Xu and Prof. Dong Xu. I have closely collaborated with Dr. Yichao Wu, Dr. Jinyang Guo, Dr. Tan Yu, and Prof. Wanli Ouyang.
-My research interests include computer vision and natural language processing. I have done related research works on knowledge distillation, neural architecture search, face recognition, point cloud understanding, multi-modal learning, and large language models.
+I am an incoming Ph.D. student at the University of Waterloo (mentored by Prof. Wenhu Chen).
 <p>
-I obtained a bachelor's degree (2015-2019) from the Department of Software Engineering, Beihang University.
+I obtained a bachelor's degree (2016-2020) from the Department of Computer Science, Beijing University of Posts and Telecommunications.
+I obtained a master's degree (2020-2022) from the Rackham Graduate School, University of Michigan, Ann Arbor, majoring in Electrical and Computer Engineering. 
 <p>
-I interned at SenseTime (working with Dr. Yichao Wu), Baidu (working with Dr. Tan Yu), and Shanghai AI LAB (working with Dr. Tong He).
+I co-found the Multimodal Art Projection Research Community, with Yizhi Li, Ruibin Yuan, and Yinghao Ma.
+<p>
+I interned at Apple (working with Mrs. Christie Zhu), BAAI (working with Dr. Jie Fu and Dr. Wenhao Huang), and 01.ai (working with Dr. Wenhao Huang). I also closely collaborate with Prof. Wenhu Chen, Prof. Chenghua Lin, Dr. Xiang Yue, and Dr. Ruibo Liu.
 </p>
 
 <p id="publications">
